Revision history for Perl extension Game::MarbleRun
	- improved parsing for rare cases
1.12 Tue Jan 02 2025
	- added vertical cannon
	- added releaser
	- english documentation enhanced
	- improved drawing and bug fixes 
1.11 Sun Jul 23 2023
	- reworked code for position notation with ground planes (relative pos)
	- documentation updates
	- improved drawing of flex tube
	- corrected calculation for rail end points
	- corrected calculation of plane heights
1.10  Mon Mar 20 2023
	- Incompatible change: new notation for balconies and walls
	- german documentation reflects new notation
	- several tracks updated according to changed notation
	- new extension color swap added
	- marble animation with timing working for simple tracks
	- corrected export of marble runs (transparent planes, finish line)
	- corrected positioning of double balconies and tiles on transparent planes
1.01  Tue Feb 15 2022
    - Symbol for splinter changed to yS. Code cleanup, fix option handling
	- Lift handling corrected. Animation working mostly, timing incorrect.
	- new option -m to generate SVG with animation, -y to force yes answer
1.00  Thu Jan 27 2022
    - new elements can be used in runs and get drawn
    - non rectangular ground planes can be visualized
0.991 Thu Jan 20 2022
    - added new elements from Advent calendar 2021, updated german doc
    - fixed bug in spiral connection check, Symbol for splinter changed to yV.
0.99  Tue Jul 29 2021
    - added several new elements and starter set "speed"
	. fixed flextube checks, finish line drawing, marble placement and arrivals
0.98  Wed Mar 24 2021
    - the symbol for rail extralog changed to o->g, for a ball to 0->o
    - marbles are visualized, simple tracks get animated
	- The DB can get populated initially with a demo track
0.97  Fri Feb 19 2021
    - notation for balconies and walls simplified, walls get numbered
	- marble placement and initial actions
0.96  Tue Feb 09 2021