@@ -1,5 +1,6 @@
 Revision history for Perl extension Game::MarbleRun
 	- improved parsing for rare cases
+	- track description corrected
 1.12 Tue Jan 02 2025
 	- added vertical cannon
 	- added releaser
